Builddir and CI artifact

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,8 @@ image: kissaki/qt5-buildenv:latest
 
 build:
   script:
-    - cd /builds/Kissaki/Videocutter
     - qmake
     - make
+  artifacts:
+    paths:
+      - bin/Videocutter
