Fix GitLab CI paths after source move

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,9 +3,10 @@ image: kissaki/qt5-buildenv:latest
 build:
   stage: build
   script:
+    - cd src
     - qmake
     - make
   artifacts:
     name: "${CI_PROJECT_NAME}_${CI_BUILD_NAME}_${CI_BUILD_REF_NAME}_${CI_BUILD_REF}"
     paths:
-    - bin/Videocutter
+    - src/bin/Videocutter
