--- a/installer/packages/de.kcode.videocutter/meta/package.xml
+++ b/installer/packages/de.kcode.videocutter/meta/package.xml
@@ -6,4 +6,5 @@
     <ReleaseDate>2018-12-09</ReleaseDate>
     <Default>true</Default>
     <ForcedInstallation>true</ForcedInstallation>
+    <Script>installscript.qs</Script>
 </Package>
