--- a/src-dotnet/Videocutter/Videocutter.csproj
+++ b/src-dotnet/Videocutter/Videocutter.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <NullableReferenceTypes>true</NullableReferenceTypes>
     <UseWPF>true</UseWPF>
     <Authors>Jan Klass</Authors>
     <Company></Company>
