Implement various functionality; markings, export status, multiple exports, fix slice end jump to begin…

--- a/src-dotnet/Videocutter/Videocutter.csproj
+++ b/src-dotnet/Videocutter/Videocutter.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <None Remove="Controls\FileInfoUC.xaml" />
+    <None Remove="Controls\MarkingsList.xaml" />
   </ItemGroup>
 
   <ItemGroup>
