Replace Qt program source with .NET source

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,4 @@
-*.pro.user*
 *.csproj.user*
-/installer/Videocutter-Installer.exe
-/3rd-party
-/src/Makefile
-/src/Makefile.Debug
-/src/Makefile.Release
-/src/release
-/src/debug
-/installer/packages/de.kcode.videocutter/data
-/src/bin
-/src/ui_*.h
-/src/.qmake.stash
-/src/Videocutter_resource.rc
-/src-dotnet/.vs/
-/src-dotnet/*/bin/
-/src-dotnet/*/obj/
+/src/.vs/
+/src/*/bin/
+/src/*/obj/
