CI: Add title to release name

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,3 +41,4 @@ jobs:
     inputs:
       gitHubConnection: videocutter-github-release-connection
       repositoryName: Kissaki/videocutter
+      title: 'Videocutter $(Build.SourceBranchName)'
