Code: Add FxCopAnalyzers

--- a/src/Videocutter/Videocutter.csproj
+++ b/src/Videocutter/Videocutter.csproj
@@ -26,6 +26,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Controls\FileInfoUC.xaml.cs" />
   </ItemGroup>
 
