--- a/src/VideocutterTest/VideocutterTest.csproj
+++ b/src/VideocutterTest/VideocutterTest.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
-    <NullableReferenceTypes>true</NullableReferenceTypes>
+    <TargetFramework>net6.0-windows</TargetFramework>
+    <Nullable>enable</Nullable>
     <RootNamespace>KCode.Videocutter</RootNamespace>
   </PropertyGroup>
 
