test: Test with Release configuration

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: dotnet test
-      run: dotnet test src
+      run: dotnet test src --property:Configuration=Release
     - name: publish
       run: dotnet publish src\Videocutter --property:Configuration=Release --self-contained --os win --arch x64 --output publish\Videocutter
     - name: Upload build artifacts
